package design.strtegy.strtegyservice;

/**
 * description:<策略接口>
 *
 * @author 武亚军 (yajun.wu@ucarinc.com)
 * @version 1.0
 * @date 2019/8/5 10:14
 */
public interface InterfaceStrtegy {
    /**
     * description:<每个策略都是一个可执行的方法>
     *
     * @author 武亚军 (yajun.wu@ucarinc.com)
     * @date 2019/8/5 10:16
     */
    void operate();

}
